Remove Collectors.toList()